[tool.poetry]
name = "repl_python3_VibeBerry"
version = "0.1.0"
description = ""
authors = ["AttAditya <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
youtube-search-python = "^1.5.3"
PyNaCl = "^1.4.0"
pytube3 = "^9.6.4"
pytube = "^11.0.2"
youtube_dl = "^2021.12.17"
yt-dlp = "^2021.12.27"
ytmdl = "^2021.11.7"
ffmpeg = "^1.4"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
